--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,8 @@ jobs:
         uses: webbertakken/unity-builder@v0.10
         with:
           unityVersion: 2020.1.7f1
-          targetPlatform: WebGL 
+          targetPlatform: WebGL
+          projectPath: UnityGame
 
       # Output 
       - uses: actions/upload-artifact@v1
