--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,32 +40,32 @@ get-activation-file:
       - $UNITY_ACTIVATION_FILE
     expire_in: 10 min # Expiring this as artifacts may contain sensitive data and should not be kept public
 
-.test: &test
-  stage: build_and_test
-  <<: *unity_before_script
-  <<: *cache
-  <<: *license
-  script:
-    - chmod +x ./ci/test.sh && ./ci/test.sh
-  artifacts:
-    paths:
-      - $(pwd)/$TEST_PLATFORM-results.xml
-      - $(pwd)/$TEST_PLATFORM-coverage/
-  # https://gitlab.com/gableroux/unity3d-gitlab-ci-example/-/issues/83
-  # you may need to remove or replace these to fit your need if you are using your own runners
-  tags:
-    - gitlab-org
-  coverage: /<Linecoverage>(.*?)</Linecoverage>/
+# .test: &test
+#   stage: build_and_test
+#   <<: *unity_before_script
+#   <<: *cache
+#   <<: *license
+#   script:
+#     - chmod +x ./ci/test.sh && ./ci/test.sh
+#   artifacts:
+#     paths:
+#       - $(pwd)/$TEST_PLATFORM-results.xml
+#       - $(pwd)/$TEST_PLATFORM-coverage/
+#   # https://gitlab.com/gableroux/unity3d-gitlab-ci-example/-/issues/83
+#   # you may need to remove or replace these to fit your need if you are using your own runners
+#   tags:
+#     - gitlab-org
+#   coverage: /<Linecoverage>(.*?)</Linecoverage>/
 
-test-playmode:
-  <<: *test
-  variables:
-    TEST_PLATFORM: playmode
+# test-playmode:
+#   <<: *test
+#   variables:
+#     TEST_PLATFORM: playmode
 
-test-editmode:
-  <<: *test
-  variables:
-    TEST_PLATFORM: editmode
+# test-editmode:
+#   <<: *test
+#   variables:
+#     TEST_PLATFORM: editmode
 
 .build: &build
   stage: build_and_test
